feat(form): added netlify config

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -21,9 +21,9 @@
     "soft": "Soft Skills",
     "soft-content": "Curiosité, patience, empathie, adaptabilité, polyvalence.",
     "project": "Conduite de projets - Lead",
-    "project-content": "Agile, Scrum, Jira...",
+    "project-content": "Agile, Scrum, Jira",
     "tests": "Tests",
-    "tests-content": "Tests unitaires et d'intégrations : Karma, Jest, Jasmine, Cypress.",
+    "tests-content": "Tests unitaires et d'intégrations : Karma, Jest, Jasmine, Cypress",
     "git": "Git",
     "git-content": "Gitlab, GitHub",
     "cloud": "Cloud",
@@ -49,11 +49,11 @@
   "services": {
     "title": "Services",
     "text1": "<strong>Développeur web</strong> depuis près de 15 ans, mon expérience me permet aujourd'hui de proposer mes services en tant que <strong>consultant</strong> et <strong>lead développeur</strong> web <strong>freelance</strong>. Véritablement <strong>fullstack</strong>, je prends en main votre projet d'<strong>API</strong> ou <strong>interface utilisateur</strong>.",
-    "text2": "Mon principal atout est ma polyvalence. Je saurai proposer solutions et architectures en fonction de vos environnements techniques, équipes et objectifs, là où d'autres proposeront seulement leur environnement de confort. Je peux manager une <strong>équipe agile</strong>, en apportant mes <strong>bonnes pratiques</strong> et encourageant respect et bienveillance.",
+    "text2": "Mon principal atout est ma polyvalence. Je saurai proposer solutions et architectures en fonction de vos environnements techniques, équipes et objectifs, là où d'autres proposeront seulement leur environnement de confort. Je peux manager une <strong>équipe agile</strong> en apportant mes <strong>bonnes pratiques</strong> et en encourageant respect et bienveillance.",
     "study": "Etude et conseil",
-    "study-content": "J'étudie projets, besoins ou problématiques et fournis <strong>rapports techniques</strong> détaillés, propositions d'<strong>architecture modernes</strong> et roadmaps, adaptés à votre équipe et environnement.",
+    "study-content": "J'étudie projets, besoins ou problématiques et fournis <strong>rapports techniques</strong> détaillés. Je peux faire des propositions d'<strong>architecture modernes</strong> et des roadmaps adaptées à vos équipes et environnement.",
     "websites": "Sites web, blogs, eCommerce",
-    "websites-content": "Je développe tout type de <strong>sites web</strong> : blogs, sites vitrines, applications métier, console d'administration ou site eCommerce. J'applique les stratégies de <strong>référencement naturel</strong> et d'<strong>accessibilité</strong>.",
+    "websites-content": "Je développe tous types de <strong>sites et applications web</strong> : blogs, sites vitrines, applications métier, console d'administration ou site eCommerce. J'applique les stratégies de <strong>référencement naturel</strong> et d'<strong>accessibilité</strong>.",
     "dev": "Développements Javascript",
     "dev-content": "Je m’intègre dans votre <strong>équipe agile</strong> ou travaille en autonomie totale. Je m’adapte facilement à votre stack technique, vos processus et votre <strong>gitflow</strong>, tout en apportant mes conseils de bonnes pratiques.",
     "pwa": "Progressive Web Applications",
@@ -63,7 +63,7 @@
     "tu": "Tests unitaires et d'intégration",
     "tu-content": "Vous souhaitez améliorer votre couverture de tests ? Je développe vos <strong>tests unitaires</strong> et d'intégration après un audit, et selon vos exigences de couverture.",
     "mentoring": "Mentoring",
-    "mentoring-content": "J’interviens en interne pour guider une équipe vers les <strong>meilleures pratiques</strong> adaptées à votre environnement. Je peux prendre le rôle de <strong>Scrum Master</strong> (PSM1).",
+    "mentoring-content": "J’interviens en interne pour guider vos équipes vers les <strong>meilleures pratiques</strong> adaptées à votre environnement. Je peux prendre le rôle de <strong>Scrum Master</strong> (PSM1).",
     "pipelines": "Pipelines",
     "pipelines-content": "Je met en place des <strong>pipelines</strong> de tests, de qualité de code, de mise en ligne. J'<strong>industrialise</strong> vos procédés de <strong>production web</strong>, pour les rendre plus sûrs et plus rapides.",
     "architecture": "Architecture",
@@ -79,7 +79,7 @@
   "contact": {
     "seoTitle": "Contact - Tout pour vos formations, onboardings et animations",
     "title": "Contact",
-    "invite": "Vous avez des questions ? Besoin d'aide ? N'hésitez pas !",
+    "invite": "Vous avez des questions ? N'hésitez pas !",
     "send": "Envoyer",
     "email": "Email",
     "emailError": "Une adresse mail valide est requise",
